<resources>
    <string name="app_name">Bear1</string>
    <string name="proTitle">虎符HFClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tlt_login">用户登录</string>

    <string name="lb_username">用户名</string>
    <string name="lb_loginpwd">登录密码</string>

    <string name="input_user_name">请输入用户名</string>
    <string name="input_user_password">请输入密码</string>


    <string name="btn_login">登录</string>
    <string name="btn_cancel">取消</string>

    // color self-define
    <color name="checked">#05a</color>
    <color name="nochecked">#aaa</color>

</resources>
